tests/fixtures/invalid/abs_none.py
# Cannot call abs() with None
x = abs(None)
